--- a/style.css
+++ b/style.css
@@ -130,3 +130,12 @@ h2{
         color: green;
     }
 }
+
+.grid-container{
+    display: grid;
+    grid-template-columns:repeat(4, 1fr);
+    grid-gap:10px;
+}
+.grid-cell{
+    border:1px solid goldenrod;
+}
